<resources>
    <string name="app_name">FirebaseTestTask</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="register_new_account">Register new account</string>
    <string name="add_note">Add note</string>
    <string name="choose_photo">Choose photo</string>
    <string name="photo_chosen">Photo chosen</string>
    <string name="empty_hint">Notes list empty</string>
    <string name="enter_note_text_hint">Enter note text here:</string>
</resources>